--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ main {
   padding: 3em 6em;
   position: relative;
   z-index: 0;
-  background-image: url("/images/bg-intro-desktop.png");
+  background-image: url("bg-intro-desktop.png");
   background-repeat: no-repeat;
 }
 
@@ -199,7 +199,7 @@ main picture {
 @media (max-width: 700px) {
   main {
     flex-direction: column;
-    background-image: url("/images/bg-intro-mobile.png");
+    background-image: url("bg-intro-mobile.png");
     background-repeat: no-repeat;
   }
 
